apply fixes for bug in emu-3.1 here